...
        "Examen Ordinario",
        "Centro Preuniversitario",
        "Primeros Puestos"
    )

    val carrerasDisponibles = listOf(
        "Medicina Humana",
        "Ingeniería de Sistemas",
        "Derecho",
        "Administración",
        "Contabilidad",
        "Psicología",
        "Economía"
...
